<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulls and Cows</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">Новая игра</string>
    <string name="menu_start">Начать игру</string>
    <string name="about">Правила игры</string>
    <string name="thinkof_label">Загадайте число</string>
    <string name="win_title">Победа!</string>
    <string name="win_text">Поздравляем! Вы победили!</string>
    <string name="newgame_thinkof_label">Загадайте число</string>
    <string name="newgame_thinkof_button">Играть вдвоем \n (нужно загадать число)</string>
    <string name="newgame_thinkof_or">Или:</string>
    <string name="newgame_thinkof_random_button">Играть одному</string>
    <string name="dlg_new_game">Новая игра</string>
    <string name="dlg_menu">Выйти в меню</string>
    <string name="dlg_exit">Завершить игру</string>
    <string name="game_guess">Ваш вариант</string>
    <string name="game_check">Проверить</string>
    <string name="game_bulls">Быки:</string>
    <string name="game_cows">Коровы:</string>
    <string name="alert_digitsnotdifferent">Все цифры должны быть различными!</string>
    <string name="aler_digits_already_guessed">Число уже использовалось !</string>
    <string name="lose_title">Неудача</string>
    <string name="lose_text">Вы проиграли :(</string>
    <string name="lose_answer">Правильный ответ: </string>
    <string name="exit">Выход</string>
     <string name="about_rules"><b>Правила:</b>\nЗагадывается четырехзначное число, после чего вы должны угадать
        его за 10 или менее попыток. Цифры от 0 до 9 в числе не повторяются,
        причем 0 может стоять на первом месте.\n
        Вы вводите свой вариант числа, компьютер сравнивает его с загаданным
        числом и выдает результат в виде “Быков” и “Коров”:
        “Бык” - цифра присутствует в загаданном числе и стоит на своем месте.
        “Корова” - цифра присутствует в загаданном числе, но стоит не на своем
        месте.\n
        Вы анализируете результат и вводите следующий вариант и так
        далее, пока не угадаете число.
    </string>

</resources>
